--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
                 <p class="footer__copyright">Francis Lecutiez © 2023</p>
             </section>
             <div class="footer__right">
-                <a href="mailto:bijouteriepinguet@orange.fr">bijouteriepinguet@orange.fr</a>
-                <a href="tel:+335 46 41 12 39">05 46 41 12 39</a>
+                <a class="footer__email" href="mailto:bijouteriepinguet@orange.fr">bijouteriepinguet@orange.fr</a>
+                <a class="footer__phone" href="tel:+335 46 41 12 39">05 46 41 12 39</a>
+                <p class="footer__legal">Mention légales</p>
+                <p class="footer__confidential">Politique de confidentialité</p>
             </div>
         </footer>
     </section>
