--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </header>
     <main class="main">
         <h2 class="main__title">L'esprit créatif inspire les bonnes idées. Soyez inventif !</h2>
+        <img class="main__linesright" src="assets/linesright.png" alt="linesright">
+        <img class="main__linesleft" src="assets/linesleft.png" alt="linesleft">
         <figure class="main__figures">
             <img src="assets/" alt="img1" class="main__images">
             <h3 class="main__subtitles">Example of subtitle</h3>
