Add burger menu to nav responsive

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <nav class="navigation">
         <img class="navigation__logo" src="assets/logo.png" alt="logo">
-        <label class="navigation__burger" for="burger"></label>
-        <input class="navigation__input" type="checkbox" name="burger" id="burger">
+        <input class="navigation__input" type="checkbox" name="burger" id="icone-burger-close">
+        <label class="navigation__burger" for="icone-burger-close"></label>
         <ul class="navigation__items">
             <li class="navigation__item">Accueil</li>
             <li class="navigation__item">Création</li>
