--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="main__linesright" src="assets/linesright.png" alt="linesright">
         <img class="main__linesleft" src="assets/linesleft.png" alt="linesleft">
         <figure class="main__figures">
-            <img src="assets/" alt="img1" class="main__images">
+            <img src="assets/machine1.png" alt="img1" class="main__images">
             <h3 class="main__subtitles">Example of subtitle</h3>
             <p class="main__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
                 Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices
@@ -41,7 +41,7 @@
                 erat placerat. In iaculis arcu eros, eget tempus orci facilisis id.</p>
         </figure>
         <figure class="main__figures">
-            <img src="assets/" alt="img2" class="main__images">
+            <img src="assets/machine2.png" alt="img2" class="main__images">
             <h3 class="main__subtitles">Example of subtitle</h3>
             <p class="main__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
                 Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices
@@ -51,7 +51,7 @@
                 erat placerat. In iaculis arcu eros, eget tempus orci facilisis id.</p>
         </figure>
         <figure class="main__figures">
-            <img src="assets/" alt="img3" class="main__images">
+            <img src="assets/bague.png" alt="img3" class="main__images">
             <h3 class="main__subtitles">Example of subtitle</h3>
             <p class="main__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
                 Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices
