--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         </ul>
     </nav>
     <header class="header">
-        <h1 class="header__subtitle">Maitre artisan Bijoutier Joailler depuis 1950 <br>Création, fabrication,
-            transformation, réparation, rénovation</h1>
-        <h2 class="header__title">Bijouterie Joaillerie PINGUET</h2>
+        <h1 class="header__subtitle">Maitre artisan Bijoutier Joailler depuis 1950<span>Création, fabrication,
+                transformation, réparation, rénovation</span>
+        </h1>
+        <h2 class="header__title">Bijouterie Joaillerie <span>PINGUET</span></h2>
     </header>
     <main class="main">
         <h2 class="main__title">L'esprit créatif inspire les bonnes idées. Soyez inventif !</h2>
