ajout des bijoux

--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
         <h2 class="creations__title">Nos créations</h2>
         <h3 class="creations__subtitle">Des bijoux en Saphir, Rubis, Emeraude, Perle, Perle De Tahiti, Aigue_Marine,
             Tanzanite, Citrine, Amethyste, Peridot, Tourmaline, Spinelle, Grenat etc...</h3>
-        <div class="creations__images">
+            <img src="assets/aigue.png" alt="aigue" class="creations__aigue" hidden>
+            <img src="assets/peridot.png" alt="peridot" class="creations__peridot" hidden>
+            <img src="assets/tanzanite.png" alt="tanzanite" class="creations__tanzanite" hidden>
+            <img src="assets/spinelle.png" alt="spinelle" class="creations__spinelle" hidden>
+
+            <div class="creations__images">
             <img src="assets/creation1.png" alt="1" class="creations__image">
             <img src="assets/creation2.png" alt="2" class="creations__image">
             <img src="assets/creation3.png" alt="3" class="creations__image">
