--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <input class="navigation__input" type="checkbox" name="burger" id="icone-burger-close">
         <label class="navigation__burger" for="icone-burger-close"></label>
         <ul class="navigation__items">
-            <li class="navigation__item">Accueil</li>
+            <li class="navigation__item"><a href="#header">Accueil</a></li>
             <li class="navigation__item">Création</li>
             <li class="navigation__item">A propos</li>
-            <li class="navigation__item">Contact</li>
+            <li class="navigation__item"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <header class="header">
+    <header class="header" id="header">
         <h1 class="header__subtitle">Maitre artisan Bijoutier Joailler depuis 1950<span>Création, fabrication,
                 transformation, réparation, rénovation</span>
         </h1>
@@ -76,7 +76,7 @@
             <img src="assets/creation7.png" alt="7" class="creations__image">
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="contact__map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11053.76426233274!2d-1.1522517!3d46.1618751!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480153a89b82c8d7%3A0x851033b48a3ca10c!2sPinguet%20bijoutier%20Joaillier!5e0!3m2!1sen!2sfr!4v1703599431397!5m2!1sen!2sfr"
