--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <h2 class="creations__title">Nos créations</h2>
         <h3 class="creations__subtitle">Des bijoux en Saphir, Rubis, Emeraude, Perle, Perle De Tahiti, Aigue_Marine,
             Tanzanite, Citrine, Amethyste, Peridot, Tourmaline, Spinelle, Grenat etc...</h3>
-            <img src="assets/aigue.png" alt="aigue" class="creations__aigue" hidden>
-            <img src="assets/peridot.png" alt="peridot" class="creations__peridot" hidden>
-            <img src="assets/tanzanite.png" alt="tanzanite" class="creations__tanzanite" hidden>
-            <img src="assets/spinelle.png" alt="spinelle" class="creations__spinelle" hidden>
+        <img src="assets/aigue.png" alt="aigue" class="creations__aigue" hidden>
+        <img src="assets/peridot.png" alt="peridot" class="creations__peridot" hidden>
+        <img src="assets/tanzanite.png" alt="tanzanite" class="creations__tanzanite" hidden>
+        <img src="assets/spinelle.png" alt="spinelle" class="creations__spinelle" hidden>
 
-            <div class="creations__images">
+        <div class="creations__images">
             <img src="assets/creation1.png" alt="1" class="creations__image">
             <img src="assets/creation2.png" alt="2" class="creations__image">
             <img src="assets/creation3.png" alt="3" class="creations__image">
@@ -111,7 +111,7 @@
     <footer class="footer">
         <section class="footer__left">
             <h2 class="footer__title">Bijouterie Joaillerie PINGUET</h2>
-            <a class="footer__adresse" href="">29 rue Gargoulleau
+            <a class="footer__adresse" href="">29 rue Gargoulleau, <br>
                 17000 LA ROCHELLE</a>
             <p class="footer__copyright">Francis Lecutiez © 2023</p>
         </section>
