--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <input class="navigation__input" type="checkbox" name="burger" id="icone-burger-close">
         <label class="navigation__burger" for="icone-burger-close"></label>
         <ul class="navigation__items">
-            <li class="navigation__item"><a href="#header">Accueil</a></li>
-            <li class="navigation__item">Création</li>
-            <li class="navigation__item">A propos</li>
+            <li class="navigation__item"><a href="#accueil">Accueil</a></li>
+            <li class="navigation__item"><a href="#a-propos">A propos</a></li>
+            <li class="navigation__item"><a href="#creations">Créations</a></li>
             <li class="navigation__item"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <header class="header" id="header">
+    <header class="header" id="accueil">
         <h1 class="header__subtitle">Maitre artisan Bijoutier Joailler depuis 1950<span>Création, fabrication,
                 transformation, réparation, rénovation</span>
         </h1>
@@ -31,7 +31,7 @@
         <h2 class="main__title">L'esprit créatif inspire les bonnes idées. Soyez inventif !</h2>
         <img class="main__linesright" src="assets/linesright.png" alt="linesright">
         <img class="main__linesleft" src="assets/linesleft.png" alt="linesleft">
-        <figure class="main__figures">
+        <figure class="main__figures" id="a-propos">
             <img src="assets/machine1.png" alt="img1" class="main__images">
             <h3 class="main__subtitles">Example of subtitle</h3>
             <p class="main__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
@@ -62,7 +62,7 @@
                 erat placerat. In iaculis arcu eros, eget tempus orci facilisis id.</p>
         </figure>
     </main>
-    <section class="creations">
+    <section class="creations" id="creations">
         <h2 class="creations__title">Nos créations</h2>
         <h3 class="creations__subtitle">Des bijoux en Saphir, Rubis, Emeraude, Perle, Perle De Tahiti, Aigue_Marine,
             Tanzanite, Citrine, Amethyste, Peridot, Tourmaline, Spinelle, Grenat etc...</h3>
